# todowkaapp

./: .editorconfig  .gitignore  AGENTS.md  BACKLOG.md  DEPLOY.md  FASE_8_REPORT.md  OFFLINE_TESTING.md  PROMPT.md  README.md  check.sh  check_backend.sh  check_frontend.sh  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0513b209aa1d_initial_schema.py  20260407_1650_initial_schema_0513b209aa1d.py  20260409_1144_add_is_admin_and_is_blocked_fields_add_admin_fields.py  20260409_2150_6e177ba42dbf_drop_is_blocked_column_from_users.py  20260409_2150_drop_is_blocked_column_from_users_6e177ba42dbf.py  20260410_1503_add_revoked_tokens_table_66f131828079.py  20260410_1515_add_completed_at_to_tasks_aa554e189f47.py  (+43 more)
backend/app/: config.py  database.py  dependencies.py  event_bus.py  main.py  rate_limit.py  scheduler.py  security.py
backend/tests/: conftest.py  test_areas.py  test_auth.py  test_change_password.py  test_client_uuid.py  test_config.py  test_contexts.py  test_dedup.py  test_delete_account.py  test_event_recurrence.py  test_export_import.py  test_notifications_api.py  test_projects.py  test_recurrence.py  test_reminder_service.py  test_review_api.py  test_review_service.py  test_revoked_tokens.py  test_scheduler.py  test_session_api.py  test_session_service.py  test_sse.py  test_stats.py  test_tags.py  test_tasks.py  test_telegram_auth.py  test_telegram_auth_api.py  test_telegram_auth_service.py  test_trash_cleanup.py  test_users.py
(+690 files in other folders)
